syntax = "proto3";

option go_package = "async-arch/task-tracker";
package schemas;

message Header{
  string application_id = 1;
  int64 timestamp = 2;
  string message_id = 3;
  string event_descriptor = 4;
}

message Task {
    string publicId = 1;
    int64 createdAt = 3;
    Header header = 4;
}
